[package]
name = "ublu-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-std = "0.4.0"
ark-bls12-381 = "0.4.0"
rand = "0.8.5"
aes = "0.8.4"
aes-prng = "~0.2"
anyhow = "~1.0"
ark-transcript = "0.0.1"
stirling_numbers = "0.1.7"
